<resources>
    <string name="app_name">My WGU Degree Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bachelor of Science, Software Development</string>
    <string name="nav_header_subtitle">fmart43@wgu.com</string>
    <string name="nav_header_desc">Header Nav</string>
    <string name="action_settings">Settings</string>
    <string name="terms_label">List Terms</string>
    <string name="title_activity_add_term">Add Term</string>
    <string name="title_activity_detail_term">Detail Term</string>
    <string name="back">Back</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_list_course">List of Courses</string>
    <string name="title_activity_add_course">AddCourseActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_detail_course">Detail Course</string>

    <!--Validation Strings -->
    <string name="addTerm_title_notinformed">The title is not informed</string>
    <string name="addTerm_startDate_notinformed">The start date is not informed</string>
    <string name="addTerm_endDate_notinformed">The end date is not informed</string>
    <string name="addTerm_date_formatnotcorrect">The format of date is not correct. It has to be dd/mm/yyyy</string>
    <string name="addTerm_date_mintermlenght">End date must be at least 3 months later than start date</string>
    <string name="addTerm_date_maxtermlenght">End date can just be 9 months long</string>
    <string name="addTerm_termoverlap">The current term must start after the last term created</string>
    <string name="assessment">ASSESSMENTS</string>
    <string name="notes">NOTES</string>
    <string name="assessment_floating_title">Assessment</string>
    <string name="notes_floating_title">Note</string>
    <string name="delete_term_message">Delete this Term?</string>
    <string name="delete_assessment_message">Delete this Assessment?</string>
    <string name="delete_note_message">Delete this Note?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_assessment">Assessment</string>
    <string name="title_note">Note</string>
    <string name="addCourse_title_notinformed">The title is not informed</string>


    <!-- For settings -->
    <string name="preference_enable_notification_course_key" translatable="false">enable_notification_course</string>
    <string name="preference_enable_notification_course_label">Enable Notification</string>

    <string name="preference_time_notification_course_key" translatable="false">time_notification_course</string>
    <string name="preference_time_notification_course_label">Time Notification</string>

    <string name="preference_time_notification_course_value_1hour" translatable="false">hour</string>
    <string name="preference_time_notification_course_value_1day" translatable="false">day</string>
    <string name="preference_time_notification_course_value_1week" translatable="false">week</string>

    <string name="preference_time_notification_course_label_1hour">1 Hour</string>
    <string name="preference_time_notification_course_label_1day">1 Day</string>
    <string name="preference_time_notification_course_label_1week">1 Week</string>

    <string name="preference_time_notification_course_value_default" translatable="false">day</string>

    <string name="preference_enable_notification_assessment_key" translatable="false">enable_notification_assessment</string>
    <string name="preference_enable_notification_assessment_label">Enable Notification</string>

    <string name="preference_time_notification_assessment_key" translatable="false">time_notification_assessment</string>
    <string name="preference_time_notification_assessment_label">Time Notification</string>

    <string name="preference_time_notification_assessment_value_1hour" translatable="false">hour</string>
    <string name="preference_time_notification_assessment_value_1day" translatable="false">day</string>
    <string name="preference_time_notification_assessment_value_1week" translatable="false">week</string>

    <string name="preference_time_notification_assessment_label_1hour">1 Hour</string>
    <string name="preference_time_notification_assessment_label_1day">1 Day</string>
    <string name="preference_time_notification_assessment_label_1week">1 Week</string>

    <string name="preference_time_notification_assessment_value_default" translatable="false">day</string>

    <!-- For notifications -->
    <string name="main_notification_channel_name" translatable="false">Course goal date coming</string>

    <string name="course_notification_title">Course goal date coming</string>
    <string name="course_notification_text">The deadline for course %1$s is approaching</string>

    <string name="assessment_notification_title">Assessment date coming</string>
    <string name="assessment_notification_text">The deadline for assessment of course %1$s is approaching</string>

    <string name="notification_previously_triggered" translatable="false">notification_previously_triggered</string>
    <string name="course_alert_category_title">Course Goal Alert</string>
    <string name="assessment_alert_category_title">Assessment Alert</string>

</resources>
