<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/course_alert_category_title" >

        <SwitchPreferenceCompat
            android:defaultValue="@bool/preference_enable_notification_course_default"
            android:key="@string/preference_enable_notification_course_key"
            android:title="@string/preference_enable_notification_course_label"
            android:summaryOff="Disabled"
            android:summaryOn="Enabled" />

        <ListPreference
            android:defaultValue="@string/preference_time_notification_course_value_default"
            android:entries="@array/time_notification_course_label"
            android:entryValues="@array/time_notification_course_values"
            android:key="@string/preference_time_notification_course_key"
            android:title="@string/preference_time_notification_course_label" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/assessment_alert_category_title">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/preference_enable_notification_assessment_default"
            android:key="@string/preference_enable_notification_assessment_key"
            android:title="@string/preference_enable_notification_assessment_label"
            android:summaryOff="Disabled"
            android:summaryOn="Enabled" />

        <ListPreference
            android:defaultValue="@string/preference_time_notification_assessment_value_default"
            android:entries="@array/time_notification_assessment_label"
            android:entryValues="@array/time_notification_assessment_values"
            android:key="@string/preference_time_notification_assessment_key"
            android:title="@string/preference_time_notification_assessment_label" />
    </PreferenceCategory>

</PreferenceScreen>