<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exercise.fmart43.degreetracker.activities.ListCourseActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/content_detail_course"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:paddingLeft="10dp"
        android:text="@string/assessment">
    </TextView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_assessment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:paddingLeft="10dp"
        android:text="@string/notes">
    </TextView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
</ScrollView>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/menu_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:fab_labelStyle="@style/Labels"
        app:fab_addButtonColorNormal="?attr/colorPrimary"
        app:fab_addButtonSize="normal"
        app:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/assessment_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="?attr/colorAccent"
            app:fab_icon="@drawable/ic_assessment_24dp"
            app:fab_size="mini"
            app:fab_title="@string/assessment_floating_title" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/note_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="?attr/colorAccent"
            app:fab_icon="@drawable/ic_note_add_24dp"
            app:fab_size="mini"
            app:fab_title="@string/notes_floating_title" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</android.support.design.widget.CoordinatorLayout>
